# serializer version: 1
# name: test_climate[load_platforms0][climate.bedroom_bedroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 1,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_bedroom',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sensibo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 384>,
    'translation_key': 'climate_device',
    'unique_id': 'BBZZBBZZ',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate[load_platforms0][climate.bedroom_bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 1,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 384>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_climate[load_platforms0][climate.hallway_hallway-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'quiet',
        'low',
        'medium',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 20,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
      <ClimateEntityCapabilityAttribute.SWING_HORIZONTAL_MODES: 'swing_horizontal_modes'>: list([
        'stopped',
        'fixedleft',
        'fixedcenterleft',
      ]),
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'stopped',
        'fixedtop',
        'fixedmiddletop',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.hallway_hallway',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sensibo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 937>,
    'translation_key': 'climate_device',
    'unique_id': 'ABC999111',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate[load_platforms0][climate.hallway_hallway-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 32.9,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.2,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'high',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'quiet',
        'low',
        'medium',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hallway',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 20,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 937>,
      <ClimateEntityStateAttribute.SWING_HORIZONTAL_MODE: 'swing_horizontal_mode'>: 'stopped',
      <ClimateEntityCapabilityAttribute.SWING_HORIZONTAL_MODES: 'swing_horizontal_modes'>: list([
        'stopped',
        'fixedleft',
        'fixedcenterleft',
      ]),
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'stopped',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'stopped',
        'fixedtop',
        'fixedmiddletop',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 25,
    }),
    'context': <ANY>,
    'entity_id': 'climate.hallway_hallway',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate[load_platforms0][climate.kitchen_kitchen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 1,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.kitchen_kitchen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sensibo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 392>,
    'translation_key': 'climate_device',
    'unique_id': 'AAZZAAZZ',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate[load_platforms0][climate.kitchen_kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'low',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 1,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 392>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'climate.kitchen_kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_climate_get_device_capabilities
  dict({
    'climate.hallway_hallway': dict({
      'horizontalswing': list([
        'stopped',
        'fixedLeft',
        'fixedCenterLeft',
      ]),
      'light': list([
        'on',
        'off',
      ]),
      'swing': list([
        'stopped',
        'fixedTop',
        'fixedMiddleTop',
      ]),
    }),
  })
# ---
